--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  background: #f9f9f9;
+  width: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app .container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Search */
+.search button {
+  border: none;
+  padding: 10px;
+  background: #0059ff;
+  color: #fff;
+  margin-left: 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: 0.25s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search button:hover {
+  -webkit-box-shadow: 5px 5px 0px -1px #d3d3d3;
+  -moz-box-shadow: 5px 5px 0px -1px #d3d3d3;
+  box-shadow: 5px 5px 0px -1px #d3d3d3;
+}
+.search input {
+  padding: 10px;
+  font-weight: bold;
+  border: none;
+  background: #d3d3d3;
+  border-radius: 5px;
 }
